# book-management

./: .gitignore  README.md  Readme  db.sqlite3  mge.py  pyproject.toml
api/: api_utils.py  serializers.py  urls.py  views.py
api/templates/: home.html
lib/: models.py  output.py
lib/management/commands/: add_book.py  add_friend.py  borrow.py  info.py  list.py  return.py  rm.py  update_book.py  update_friend.py
lib/migrations/: 0003_alter_borrow_return_date.py
project/: settings.py  urls.py
scripts/: mge.py
